# ros2_dspy

./: README.md  package.xml  setup.cfg  setup.py
.docker/: docker-compose-ollama.yaml
config/: ollama.yaml
ros2_dspy/: ollama_inference.py
ros2_dspy_components/: package.xml  setup.cfg  setup.py
ros2_dspy_components/launch/: ollama_inference.launch.py
ros2_dspy_components/ros2_dspy_components/: ollama_inference.py
