<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_dspy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="peterdavidfagan@gmail.com">Peter David Fagan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>generate_parameter_library</depend>
	
  <exec_depend>dspy</exec_depend>
  <exec_depend>onnx</exec_depend>	
  <exec_depend>onnxruntime</exec_depend>	
  <exec_depend>jaxonnxruntime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
